@@ -37,8 +37,8 @@ In H: The default value of me:DOSCMethod was used.
 Diagonalize the Reaction Operator -- Time elapsed: 0 seconds.
 
 1 temperature/concentration-pressure points calculated.
-Finish Calculation -- Time elapsed: 6 seconds.
- -- Total time elapsed: 19 seconds.
+Finish Calculation -- Time elapsed: 9 seconds.
+ -- Total time elapsed: 26 seconds.
 
 System saved to out.xml
 m_scaleFactor is provided but not used in H.
