@@ -872,22 +872,32 @@ namespace mesmer
       // Determine the energy of the reservoir grain
       PersistPtr pp = m_host->get_PersistentPointer();
       PersistPtr ppReservoirSize = pp->XmlMoveTo("me:reservoirSize");
+      PersistPtr ppCemeterySize = pp->XmlMoveTo("me:cemeterySize");
+
+      // Reservoir and Cemetery cannot co-exist in order to avoid confusion
+      if (ppReservoirSize && ppCemeterySize){
+        cerr << "Either reservoir or cemetery is allowed in any well. Comment out one of the tags." << endl;
+        return false;
+      }
 
       m_numGroupedGrains = 0; // Reset the number of grains grouped into a reservoir grain to zero.
-      double cemeteryTemperature = 0.0;
 
-      while (ppReservoirSize){
+      while (ppReservoirSize || ppCemeterySize){
 
-        // Check the size of the reservoir.
-        const char* pReservoirSizeTxt = pp->XmlReadValue("me:reservoirSize");
-        double tmpvalue(0.0); stringstream s2(pReservoirSizeTxt); s2 >> tmpvalue ;
+        string typeOfWell = ppReservoirSize ? "reservoir" : "cemetery";
+        m_isCemetery = ppReservoirSize ? false : true;
 
-        const char* unitsTxt = ppReservoirSize->XmlReadValue("units", false);
+        // Check the size of the reservoir/cemetery.
+        const char* pChunkSizeTxt = ppReservoirSize? pp->XmlReadValue("me:reservoirSize") : pp->XmlReadValue("me:cemeterySize");
+        double tmpvalue(0.0); stringstream s2(pChunkSizeTxt); s2 >> tmpvalue ;
+
+        const char* unitsTxt = ppReservoirSize ? ppReservoirSize->XmlReadValue("units", false) : ppCemeterySize->XmlReadValue("units", false);
         string unitsInput;
         if (unitsTxt){
           unitsInput = unitsTxt;
         }
         else{
+          ctest << "No unit for " << typeOfWell << " size has been supplied, use kJ/mol." << endl;
           unitsInput = "kJ/mol";
         }
 
@@ -897,13 +907,13 @@ namespace mesmer
 
         if (grainLoc > 0){
           if (grainLoc > lowestBarrier){
-            ctest << "The reservoir size provided is too high, corrected according to the lowest barrier height." << endl;
+            ctest << "The " << typeOfWell << " size provided is too high, corrected according to the lowest barrier height." << endl;
             grainLoc = lowestBarrier;
           }
         }
         else{
           if (abs(grainLoc) > lowestBarrier){
-            ctest << "The reservoir size provided is too low, corrected to zero." << endl;
+            ctest << "The " << typeOfWell << " size provided is too low, corrected to zero." << endl;
             grainLoc = 0;
             break;
           }
@@ -911,7 +921,7 @@ namespace mesmer
             grainLoc = lowestBarrier + grainLoc;
           }
         }
-        ctest << "The reservoir is set to " << grainLoc << " grains, which is about " << grainLoc * m_host->getEnv().GrainSize
+        ctest << "The " << typeOfWell << " is set to " << grainLoc << " grains, which is about " << grainLoc * m_host->getEnv().GrainSize
               << " cm-1 from the well bottom." << endl;
 
         // Second find out the partition fraction of active states in the current temperature
@@ -927,29 +937,12 @@ namespace mesmer
 
         m_numGroupedGrains = grainLoc;
         ctest << popAbove << " of the " << m_host->getName() << " population is in the active states. "
-              << "Reservoir size = " << m_numGroupedGrains * m_host->getEnv().GrainSize
+              << "The " << typeOfWell << " size = " << m_numGroupedGrains * m_host->getEnv().GrainSize
               << " cm-1, which is " << m_numGroupedGrains * m_host->getEnv().GrainSize / 83.593 << " kJ/mol." << endl;
-
-        // Check the under what condition the reservoir turn into a cemetery.
-        const char* temperatureTxt = ppReservoirSize->XmlReadValue("turnCemeteryWhenUnder", false);
-        stringstream temperatureInput;
-        if (temperatureTxt){
-          temperatureInput << temperatureTxt;
-          temperatureInput >> cemeteryTemperature;
-          if (cemeteryTemperature < 0.0) cemeteryTemperature = 0.0;
-          if (cemeteryTemperature == NaN) cemeteryTemperature = 0.0;
-        }
-        else{
-          cemeteryTemperature = 0.0;
-        }
-        if (cemeteryTemperature != 0.0)
-          ctest << "Reservoir state of " << m_host->getName()
-                << " turns into a cemetery state under " << cemeteryTemperature << " K." << endl;
         break;
       }
 
       if (m_numGroupedGrains){
-        m_isCemetery = (1.0 / (boltzmann_RCpK * beta)) <= cemeteryTemperature ? true : false;
         if (!collisionOperatorWithReservoirState(beta, m_ncolloptrsize - m_numGroupedGrains)){
           cerr << "Failed building collision operator with reservoir state.";
           return false;
