@@ -1,3 +1,6 @@
+_2009_11_13__15_35_43_ Chi-Hsiu Liang
+
+  * Modify the way specifying cemetery state
 
 2009-November-13 Struan Robertson
 
